<resources>
    <string name="app_name">TTMS</string>
    <!-- Strings related to login -->
    <string name="prompt_email">手机号</string>
    <string name="prompt_password">验证码</string>
    <string name="action_sign_in">登录/注册</string>
    <string name="action_sign_in_short">登入</string>
    <string name="welcome">欢迎登陆</string>
    <string name="invalid_username">不是有效的手机号</string>
    <string name="invalid_password">验证码长度不足6位</string>
    <string name="login_failed">登陆失败</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">我的</string>
    <string name="getPassWord">获取验证码</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>